tests/snapshots/snapshot_tests__random_board_snapshot_89.snap
---
source: tests/snapshot_tests.rs
expression: "(minions, recording)"
---
- ? idx: 1
    version: 1
  : SurfNSurf
  ? idx: 2
    version: 1
  : AdaptableBarricade
  ? idx: 3
    version: 1
  : GreaseBot
  ? idx: 4
    version: 1
  : AggemThorncurse
  ? idx: 5
    version: 1
  : Dreadbeard
  ? idx: 6
    version: 1
  : BongoBopper
  ? idx: 7
    version: 1
  : SanguineChampion
  ? idx: 8
    version: 1
  : FloatingWatcher
  ? idx: 9
    version: 1
  : ScrapScraper
  ? idx: 10
    version: 1
  : FlourishingFrostling
  ? idx: 11
    version: 1
  : DeckSwabbie
  ? idx: 12
    version: 1
  : MantidQueen
  ? idx: 13
    version: 1
  : Felemental
  ? idx: 14
    version: 1
  : ChampionOfSargeras
- - ProposeAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 2
        version: 1
      amount: 1
      source:
        idx: 1
        version: 1
  - TakeDamage:
      target:
        idx: 1
        version: 1
      amount: 18
      source:
        idx: 2
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 2
        version: 1
  - Death:
      minion:
        idx: 1
        version: 1
  - AfterAttack:
      attacker:
        idx: 1
        version: 1
      defender:
        idx: 2
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 7
        version: 1
      amount: 3
      source:
        idx: 4
        version: 1
  - TakeDamage:
      target:
        idx: 4
        version: 1
      amount: 18
      source:
        idx: 7
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 4
        version: 1
  - Death:
      minion:
        idx: 7
        version: 1
  - AfterAttack:
      attacker:
        idx: 4
        version: 1
      defender:
        idx: 7
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 1
      source:
        idx: 3
        version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 3
        version: 1
      defender:
        idx: 14
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 3
        version: 1
      amount: 4
      source:
        idx: 6
        version: 1
  - TakeDamage:
      target:
        idx: 6
        version: 1
      amount: 1
      source:
        idx: 3
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 3
        version: 1
  - AfterAttack:
      attacker:
        idx: 6
        version: 1
      defender:
        idx: 3
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 8
        version: 1
      amount: 4
      source:
        idx: 5
        version: 1
  - TakeDamage:
      target:
        idx: 5
        version: 1
      amount: 4
      source:
        idx: 8
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 8
        version: 1
  - Death:
      minion:
        idx: 5
        version: 1
  - AfterAttack:
      attacker:
        idx: 5
        version: 1
      defender:
        idx: 8
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 11
        version: 1
      amount: 5
      source:
        idx: 12
        version: 1
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 2
      source:
        idx: 11
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 11
        version: 1
  - AfterAttack:
      attacker:
        idx: 12
        version: 1
      defender:
        idx: 11
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 12
        version: 1
      amount: 4
      source:
        idx: 9
        version: 1
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 5
      source:
        idx: 12
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 12
        version: 1
  - AfterAttack:
      attacker:
        idx: 9
        version: 1
      defender:
        idx: 12
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 9
        version: 1
      amount: 10
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 4
      source:
        idx: 9
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 9
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 9
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 10
        version: 1
      amount: 3
      source:
        idx: 13
        version: 1
  - DeathCheck: ~
  - AfterAttack:
      attacker:
        idx: 13
        version: 1
      defender:
        idx: 10
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - ProposeAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - Attack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - TakeDamage:
      target:
        idx: 13
        version: 1
      amount: 10
      source:
        idx: 14
        version: 1
  - TakeDamage:
      target:
        idx: 14
        version: 1
      amount: 3
      source:
        idx: 13
        version: 1
  - DeathCheck: ~
  - Death:
      minion:
        idx: 13
        version: 1
  - AfterAttack:
      attacker:
        idx: 14
        version: 1
      defender:
        idx: 13
        version: 1
      is_outer_phase: true
  - DeathCheck: ~
  - End: TopWin

